--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -4,9 +4,16 @@
 .mb-10{
     margin-bottom: 10px;
 }
+.flex{
+    display: flex;
+}
 .center{
     display: flex;
     align-items: center;
+}
+.space-between{
+    display: flex;
+    justify-content: space-between;
 }
 .Polaris-TopBar__Contents {
     justify-content: center !important;
@@ -126,6 +133,80 @@
         .Polaris-ButtonGroup{
             margin-top: 40px;
             justify-content: center;
+        }
+    }
+}
+#create-goal-page{
+    .Polaris-Layout{
+        position: relative;
+        .Polaris-Layout__Section--oneHalf:nth-child(2){
+            position: sticky;
+            top: 56px;
+            .preview-progress-bar{
+                background-color: rgb(5, 175, 242);
+                padding: 12px;
+                .preview-progress-bar__message{
+                    text-align: center;
+                    color: #fff;
+                    font-size: 16px;
+                    font-weight: 500;
+                    strong{
+                        color: #dc5454;
+                    }
+                }
+                .preview-progress-bar__bar{
+                    margin-top: 10px;
+                    position: relative;
+                    .preview-progress-bar__bar-bg{
+                        height: 10px;
+                        display: block;
+                        background: #ebebeb;
+                        border-radius: 5px;
+                    }
+                    .preview-progress-bar__bar-track-active{
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        height: 10px;
+                        border-radius: 5px;
+                        background: #ffd030;
+                    }
+                }
+            }
+            .cart-items{
+                margin-top: 15px;
+                .cart-item{
+                    gap: 10px;
+                    .cart-item__info{
+                        flex: 1;
+                        display: flex;
+                        flex-direction: column;
+                        margin: auto 0;
+                    }
+                }
+            }
+        }
+    }
+    .unsaved-bar{
+        position: fixed;
+        top: 0;
+        z-index: 999;
+        background: #1f2124;
+        width: 100%;
+        height: 56px;
+        align-items: center;
+        padding: 0 16px;
+        .unsaved-text{
+            color: #f1f2f4;
+            font-size: 16px;
+            line-height: 24px;
+            font-weight: 600;
+        }
+        .Polaris-Button--outline{
+            color: #f1f2f4;
+            &:hover{
+                background-color: #616a75;
+            }
         }
     }
 }
