--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -1,13 +1,16 @@
-.mt-10{
+.mt-10 {
     margin-top: 10px;
 }
-.mb-10{
+
+.mb-10 {
     margin-bottom: 10px;
 }
-.center{
+
+.center {
     display: flex;
     align-items: center;
 }
+
 .Polaris-TopBar__Contents {
     justify-content: center !important;
 
@@ -49,7 +52,8 @@
                         color: rgba(0, 128, 96, 1);
                     }
                 }
-                .Polaris-TopBar__Submenu{
+
+                .Polaris-TopBar__Submenu {
                     position: absolute;
                     top: 100%;
                     left: 0;
@@ -62,12 +66,14 @@
                     background-color: #fff;
                     box-shadow: 0 0 5px rgb(23 24 24 / 5%), 0 1px 2px rgb(0 0 0 / 15%);
                     outline: 1px solid transparent;
-                    a{
+
+                    a {
                         padding: 8px;
                     }
                 }
-                &:hover{
-                    .Polaris-TopBar__Submenu{
+
+                &:hover {
+                    .Polaris-TopBar__Submenu {
                         display: block !important;
                     }
                 }
@@ -81,51 +87,140 @@
         display: flex;
         justify-content: space-between;
     }
-    .Polaris-AlphaStack{
-        img{
+
+    .Polaris-AlphaStack {
+        img {
             opacity: 0.5;
             max-width: 100px;
         }
     }
-    .select-gift-product-section{
+
+    .select-gift-product-section {
         justify-content: center;
         display: flex;
         flex-direction: column;
         align-items: center;
-        .select-gift-product-section{
-            &__image{
+
+        .select-gift-product-section {
+            &__image {
                 width: 100px;
                 height: 100px;
                 border: 1px solid rgba(225, 227, 229, 1);
                 border-radius: 0.25rem;
                 display: flex;
-                align-items: center;    
-                img{
+                align-items: center;
+
+                img {
                     width: 100%;
                     max-width: 100%;
                 }
             }
-            &__title{
+
+            &__title {
                 margin: 10px 0;
             }
-            &__placeholder{
+
+            &__placeholder {
                 margin: 10px 0;
             }
         }
-        &.not-selected{
-            .select-gift-product-section__image{
+
+        &.not-selected {
+            .select-gift-product-section__image {
                 border: none;
                 opacity: 0.5;
             }
         }
     }
-    .Polaris-FormLayout__Items{
+
+    .Polaris-FormLayout__Items {
         margin-left: -1.25rem;
     }
-    .Polaris-FormLayout__Item{
-        .Polaris-ButtonGroup{
+
+    .Polaris-FormLayout__Item {
+        .Polaris-ButtonGroup {
             margin-top: 40px;
             justify-content: center;
         }
     }
+}
+
+#progressbar {
+    .Polaris-Page {
+        max-width: 100% !important;
+    }
+    .unsaved-bar {
+        display: flex;
+        position: fixed;
+        top: 0;
+        z-index: 999;
+        background: #1f2124;
+        width: 100%;
+        height: 56px;
+        padding: 0 16px;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+
+        .unsaved-text {
+            color: #f1f2f4;
+            font-size: 16px;
+            line-height: 24px;
+            font-weight: 600;
+        }
+    }
+
+    .checkpoint-separator {
+        height: 100%;
+        position: absolute;
+        top: 0;
+    }
+
+    .checkpoint-title {
+        display: flex;
+        align-items: flex-end;
+        position: absolute;
+        font-size: 12px;
+        text-decoration: none;
+        text-align: center;
+        cursor: pointer;
+    }
+
+    .checkpoint-title div {
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        display: -webkit-box;
+        text-decoration: none;
+        color: #000;
+        color: initial;
+        overflow: hidden;
+        max-width: 80px;
+    }
+
+    .checkpoint-image-wrapper {
+        display: flex;
+        align-items: flex-end;
+        position: absolute;
+        top: -30px;
+        width: 100%;
+        max-height: 50px;
+        max-width: 50px;
+        overflow: hidden;
+        text-align: center;
+    }
+    #progress-bar-static-text-under{
+        margin-top: 25px;
+    }
+    .progress-bar-static-text{
+        text-align: center;
+    }
+    .button-color {
+        border: 1px solid #5b5959;
+        cursor: pointer;
+        display: inline-block;
+        height: 25px;
+        vertical-align: middle;
+        width: 55px;
+    }
+    
 }
